# SATySFi-fonts-cormorant

./: Makefile  README.md  Satyristes  fonts.satysfi-hash  satysfi-fonts-cormorant-doc.opam  satysfi-fonts-cormorant.opam  specimen.saty
