opam-version: "2.0"
version: "3.601+satysfi0.0.5"
synopsis: "Document: SATySFi Font Package for Cormorant"
description: """
Document: SATySFi Font Package for Cormorant

This package installs fonts from https://github.com/CatharsisFonts/Cormorant
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "GFDL-1.1-or-later"
homepage: "https://github.com/na4zagin3/SATySFi-fonts-cormorant"
bug-reports: "https://github.com/na4zagin3/SATySFi-fonts-cormorant/issues"
dev-repo: "git+https://github.com/na4zagin3/SATySFi-fonts-cormorant.git"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
  "satysfi-dist"
  "satysfi-fonts-cormorant" {= "%{version}%"}

  "satysfi-lipsum"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "fonts-cormorant-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fonts-cormorant-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
